panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__typedef__test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/typedef/test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef name `int`)
         (compound-statement
            (declaration f~1 `fn(∅: ptr<fn() -> int>) -> int` ∅)
            (declaration g~2 `fn(∅: ptr<fn(∅: int) -> int>) -> int` ∅)
            (declaration h~3 `fn(∅: ptr<fn(∅: int) -> int>) -> int` ∅)
            (declaration i~4 `fn(name: int) -> int` ∅)))))

----- stderr -----
