panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__typedef__test_use_typedef_name_in_same_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/typedef/test_use_typedef_name_in_same_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (typedef i32 `int`)
   (typedef function `fn(∅: int) -> int`))

----- stderr -----
